# Template-Feature-Points-image-matching

./: CMakeLists.txt  README.md  Template+Feature_Points.kdev4  functions.cpp  functions.h  template_ftpts.cpp
.kdev4/: Template+Feature_Points.kdev4
trash/: index_final.txt  index_part.txt  template_ftpts.cpp  x_final.txt  x_part.txt  y_final.txt  y_part.txt
